# zookeepr

./: .bzrignore  .gitignore  .project  .testr.conf  .travis.yml  ALEMBIC_FIX  AUTHORS  CHANGES  COPYING  HACKING  INSTALL  INSTALL.md  JOSH-INSTALL  JOSH-TODO  MANIFEST.in  NEW_INSTALL  NOTES  README  README.md  README.txt  THANKS  TODO  URLs.html  Vagrantfile  _maintenance.html  alembic.ini  authkit-ycros.diff  config.ini  development.ini  development.ini.sample  go-pylons.py  lca09_menu_layout.txt  lca10_menu_layout.txt  lca10_wishlist.txt  lca2007admin.txt  patch  production.ini.sample  requirements.txt  setup.cfg  setup.py  (+7 more)
MyPyramid/: MANIFEST.in  README.txt  development.ini  production.ini  setup.cfg  setup.py
MyPyramid/mypyramid/: __init__.py  legacy_view.py  views.py
alembic/: env.py
alembic/versions/: 02_29790706ec34_Add_private_abstract_to_proposal.py  03_50a794ece403_Allow_NULL_for_url_and_abstract_video_url_on_Proposal.py  (+28 more)
docs/: MIGRATE_NEW_PYLONS  NextDayVideo.md  PaymentExpress.md  ProgramManagement.md  Rego.md  WSGI_Apache_config  cfp_help.html  crud.txt  db_changes.txt  do_video.sh  index.html  index.md  lca09_menu_layout.txt  lca_2015.csv  structure.html  videos.sql  zookeepr.wsgi
dynamic_html/: flickr.html  planet.html
pylons/: local
wsgi/: development.wsgi  production.wsgi
zk/: __init__.py  tests.py  views.py
zkpylons/: model  public  websetup.py
zookeepr/: __init__.py  config.ini  websetup.py
zookeepr.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  entry_points.txt  paste_deploy_config.ini_tmpl  requires.txt  top_level.txt
(+1822 files in other folders)
