[metadata]
name = zookeepr
summary = Conference management system
description-file =
    README
author = Zookeepr developer team and linux.conf.au
author-email = zookeepr-devel@zookeepr.org
home-page = http://zookeepr.org/

[pbr]
warnerrors = True

[entry_points]
paste.app_factory =
    main = zk:main
console_scripts =
    initialise_data = zk.scripts.initialise_data:main
