[metadata]
name = zookeepr
summary = Conference management system
description-file =
    README.md
author = Zookeepr developer team and linux.conf.au
author-email = zookeepr-devel@zookeepr.org
home-page = http://zookeepr.org/

[pbr]
warnerrors = True

[entry_points]
paste.app_factory =
    main = zk:main

[pytest]
norecursedirs = .git env TestExample wsgi zk-2.0 zk.egg-info *.egg data alembic docs pbr* .tox
